--- a/templates/base.html
+++ b/templates/base.html
@@ -7,10 +7,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>{% block title %}yoursite.com{% endblock %}</title>
+  <title>{% block title %}img64.com{% endblock %}</title>
 
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="A simple service to base64 encode external images links and return JSON.">
+  <meta name="author" content="Zach Williams, hey AT zachwill DOT com">
   <meta name="viewport" content="width=980">
 
   <!-- HTML5 shim, for IE 6-8 support of HTML elements -->
@@ -27,12 +27,6 @@
   <script>window.less || document.write('<script src="/static/js/libs/less-1.1.3.min.js">\x3C/script>')</script>
 
   <link rel="shortcut icon" href="/static/favicon.ico">
-  <link rel="apple-touch-icon" href="/static/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/static/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/static/apple-touch-icon-114x114.png">
-
-  <!-- Need Modernizr? Uncomment the following script. -->
-  <!-- <script src="/static/js/libs/modernizr-2.0.6.js"></script> -->
 
 </head>
 
@@ -57,12 +51,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/static/js/libs/jquery-1.7.0.min.js">\x3C/script>')</script>
 
-
-  <!-- Additional JavaScript libraries and plugins... -->
-  <script src="/static/js/libs/bootstrap-dropdown.js"></script>
-
   {% block js %}{% endblock %}
-
 
   <!-- mathiasbynens.be/notes/async-analytics-snippet Change UA-XXXXX-X to be your site's ID -->
   <script>
